# rustemon

./: Cargo.toml
assets/: Sprite-0007.aseprite  align.py  battle.aseprite  battle.tmx  battle.tsx  black_font.aseprite  debug.aseprite  gym.aseprite  gym.tmx  gym.tsx  house_1.aseprite  house_1.tmx  house_1.tsx  landing.tmx  menu.aseprite  menu.tmx  menu.tsx  npcs.aseprite  party.aseprite  party.tmx  party.tsx  player.aseprite  player.tmx  player.tsx  pokecenter.tmx  pokecenter.tsx  pokemart.aseprite  pokemart.tmx  pokemart.tsx  pokemon.tiled-session  pokemon_back.aseprite  pokemon_front.aseprite  pokemon_party.aseprite  switch_tile_size.py  ts8.tsx  white_font.aseprite
src/: main.rs
src/audio/: mod.rs
src/game/: animation_player.rs  encounter.rs  entity.rs  font.rs  gamestate.rs  input_manager.rs  map_loader.rs  menu.rs  mod.rs  moves.rs  npc.rs  party.rs  party_old.rs  paused.rs  player.rs  pokemon.rs  running.rs  stationary_loader.rs
src/game/battle/: enemy_display.rs  mod.rs  player_display.rs  ui.rs
src/game/party/: cancel.rs  mod.rs  slot.rs
src/game/states/: encounter.rs  mod.rs  paused.rs  running.rs
src/renderer/: camera.rs  image_loader.rs  instance.rs  mod.rs  pipeline.rs  shader.wgsl  sprite.rs  texture.rs  texture_manager.rs  vertex.rs  window_map.rs
src/window/: config.rs  mod.rs
